--- a/ATM/ATM.csproj
+++ b/ATM/ATM.csproj
@@ -132,6 +132,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="BackEnd\Balance.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="CheckBalance.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -144,6 +148,9 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="BackEnd\Balance.xaml.cs">
+      <DependentUpon>Balance.xaml</DependentUpon>
     </Compile>
     <Compile Include="BackEnd\CardType.cs" />
     <Compile Include="BackEnd\external\Mod10.cs" />
